paul-apps/V3/paul-apps/base/app1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paul-app1
  name: paul-app1
spec:
  selector:
    matchLabels:
      app: paul-app1
  template:
    metadata:
      labels:
        app: paul-app1
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged
        name: paul-app1
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /usr/share/nginx/html/index.html
            name: nginx-conf1
            subPath: index.html
    volumes:
      - name: nginx-conf1
        configMap:
          name: nginx-index-html-v1cm
