paul-apps/V3/paul-apps/base/app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paulsvc1
  name: paulsvc1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: paul-app1
