paul-apps/V3/paul-apps/base/app1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: paul
  name: paulapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: paulsvc
